Fix LayoutUnit snapping of widths in line breaker

This patch fixes how the line breaker snaps widths at node boundaries.

Before this patch, only uncommitted widths are snapped. This does not
snap widths correctly when:
* All widths are committed.
* There are committed and uncommitted widths.

LayoutBlockFlow::computeInlinePreferredLogicalWidths() snaps the width
of each node. This patch changes the line breaker to do the same
snapping.

BUG=693941

Review-Url: https://codereview.chromium.org/2725933002
Cr-Commit-Position: refs/heads/master@{#454211}

Former-commit-id: 460361ba8ca8615d1794caa3e6dc517634798b4f